# tdcsim

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.lock.txt  requirements.txt  run.py  scenario_overview.md  tdc_config.yaml  tdc_config_optional.yaml  tdc_config_ratewall_source_backed.yaml
.githooks/: pre-commit
examples/: calibration_notes.md  cbo_downstream_quickstart.md  optional_feature_scenarios.yaml
scripts/: audit_historical_replay_closeout.py  build_historical_replay_cash_panel.py  build_historical_replay_cash_quarterly.py  build_historical_replay_sector_interest_allocation.py  build_historical_replay_tdcest_crosscheck.py  build_historical_replay_z1_holders.py  download_historical_replay_data.py  hygiene_check.sh  qualify_cbo_dependency.py  run_cbo_forecast_smoke.py  run_cbo_scenario.py  verify_cbo_forecast_package.py  verify_cbo_scenario_run.py  write_cbo_example_scenarios.py
src/: budget_interest.py  cbo_policy_bundle.py  cbo_portfolio_builder.py  cbo_yield_curve_surface.py  contract_validation.py  csv_gen.py  debt_targeting.py  forecast_bundle_builders.py  forecast_input_builder.py  forecast_paths.py  frn_indexation.py  funding_plan.py  historical_replay.py  historical_replay_auction.py  historical_replay_contract.py  historical_replay_event_ledger.py  historical_replay_interest.py  historical_replay_loader.py  historical_replay_materializer.py  historical_replay_observations.py  historical_replay_pricing.py  historical_replay_solver.py  historical_replay_soma.py  historical_replay_tdc.py  historical_replay_tdc_inputs.py  historical_replay_tdcest.py  holder_mapping.py  quarterly_aggregation.py  ratewall_assumption_mode_schema.py  ratewall_contract.py  ratewall_input_builder.py  ratewall_paths.py  route_component_support_registry.py  sim_engine.py  sim_groups.py  sim_helpers.py  sim_plotting.py  sim_pricing.py  sim_trading.py  simulation_calendar.py  (+5 more)
(+79 files in other folders)
